# my-dev-server

./: .gitignore  .travis.yml  README.rst  requirements.txt  setup.cfg  test-requirements.txt  tox.ini
etc/my-dev-server/: my-dev-server.conf  my-dev-server.conf.sample
my_dev_server/: config.py  logger.py  utils.py
my_dev_server/db/: api.py  base.py  migrations.py  models.py
my_dev_server/server/: app.py  common.py  exceptions.py  main.py
my_dev_server/tests/api/: base.py  test_git.py  test_ssh.py  test_users.py
my_dev_server/tests/functional/: test_users.py
