[metadata]
name = my-dev-server
summary = Utility for developers(server)
description-file = README.rst
license = Apache Software License
classifiers =
    Programming Language :: Python
    Programming Language :: Python :: 2
    Programming Language :: Python :: 2.7
    Intended Audience :: Information Technology
    Intended Audience :: System Administrators
    License :: OSI Approved :: Apache Software License
    Operating System :: POSIX :: Linux
author = esikachev
author-email = esikachov@gmail.com

[global]
setup-hooks = pbr.hooks.setup_hook

[entry_points]
console_scripts =
    my-dev-migrate = my_dev_server.db.migrations:main
    my-dev-server = my_dev_server.server.main:main

oslo.config.opts =
    sahara.config = my_dev_server.config:list_opts

[files]
packages =
    my_dev_server
